data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2187.wast
;; 7. **Test 7: Unhandled Stack Type in Loop**    - **Description**: Implement a loop with a specific operand stack type and a `br_table` instruction whose labels introduce unexpected stack types on branch, leading to an infinite restart condition.    - **Constraint**: Ensures stack types are properly managed and validated.    - **Infinite Loop Relation**: Improper handling and type mismatches can fail to exit or control the loop correctly.

(assert_invalid
  (module
    (func $unhandled-stack-type-loop
      (loop $L (result i32)
        i32.const 1
        br_table $L (i32.const 1)
      )
    )
  )
  "type mismatch"
)